--- a/wp-content/themes/knight_wallace/assets/scss/_mobile_nav.scss
+++ b/wp-content/themes/knight_wallace/assets/scss/_mobile_nav.scss
@@ -1,10 +1,10 @@
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
     #mobile_nav {
         display: none;
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1025px) {
     #main_nav, #eyebrow {
         display: none;
     }
